cleanup: flatten response objects and generate client
