# generated-openapi-client/openapi.json
@@ -272,6 +272,68 @@
       }
     },
     "/api/orgs": {
+      "get": {
+        "tags": [
+          "orgs"
+        ],
+        "operationId": "get_my_orgs",
+        "parameters": [
+          {
+            "name": "limit",
+            "in": "query",
+            "description": "Limit the number of results. Default is 30",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "format": "int64",
+              "nullable": true
+            }
+          },
+          {
+            "name": "skip",
+            "in": "query",
+            "description": "Skip the number of results",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "format": "int64",
+              "nullable": true
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "List of organizations the user belongs to",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Org"
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Service error relating to authentication status of the user",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorRespPayload"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "ApiKey": [
+              "readonly"
+            ]
+          }
+        ]
+      },
       "post": {
         "tags": [
           "orgs"
@@ -282,7 +344,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/CreateOrgReqPayload"
+                "$ref": "#/components/schemas/OrgNameReqPayload"
               }
             }
           },
@@ -294,7 +356,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/CreateOrgResp"
+                  "$ref": "#/components/schemas/Org"
                 }
               }
             }
@@ -320,6 +382,63 @@
       }
     },
     "/api/orgs/{org_id}": {
+      "put": {
+        "tags": [
+          "orgs"
+        ],
+        "operationId": "update_org_name",
+        "parameters": [
+          {
+            "name": "org_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          }
+        ],
+        "requestBody": {
+          "description": "JSON request payload to rename the organization",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/OrgNameReqPayload"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Object representing the renamed organization",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Org"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Service error relating to authentication status of the user",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorRespPayload"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "ApiKey": [
+              "readonly"
+            ]
+          }
+        ]
+      },
       "delete": {
         "tags": [
           "orgs"
@@ -387,28 +506,6 @@
           }
         }
       },
-      "CreateOrgReqPayload": {
-        "type": "object",
-        "required": [
-          "name"
-        ],
-        "properties": {
-          "name": {
-            "type": "string"
-          }
-        }
-      },
-      "CreateOrgResp": {
-        "type": "object",
-        "required": [
-          "org"
-        ],
-        "properties": {
-          "org": {
-            "$ref": "#/components/schemas/Org"
-          }
-        }
-      },
       "ErrorRespPayload": {
         "type": "object",
         "required": [
@@ -421,6 +518,49 @@
         },
         "example": {
           "message": "Bad Request"
+        }
+      },
+      "Org": {
+        "type": "object",
+        "required": [
+          "id",
+          "name",
+          "created_at",
+          "updated_at"
+        ],
+        "properties": {
+          "created_at": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "id": {
+            "type": "string",
+            "format": "uuid"
+          },
+          "name": {
+            "type": "string"
+          },
+          "updated_at": {
+            "type": "string",
+            "format": "date-time"
+          }
+        },
+        "example": {
+          "created_at": "2021-01-01T00:00:00",
+          "id": "e3e3e3e3-e3e3-e3e3-e3e3-e3e3e3e3e3e3",
+          "name": "Trieve Team",
+          "updated_at": "2021-01-01T00:00:00"
+        }
+      },
+      "OrgNameReqPayload": {
+        "type": "object",
+        "required": [
+          "name"
+        ],
+        "properties": {
+          "name": {
+            "type": "string"
+          }
         }
       },
       "User": {
